JumpScript/tests/baselines/reference/parserRegularExpressionDivideAmbiguity7.errors.txt
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity7.jump(1,2): error TS2304: Cannot find name 'a'.
tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity7.jump(2,3): error TS1005: ';' expected.


==== tests/cases/conformance/parser/ecmascript5/RegularExpressions/parserRegularExpressionDivideAmbiguity7.jump (2 errors) ====
    (a/8
     ~
!!! error TS2304: Cannot find name 'a'.
     ){}
      ~
!!! error TS1005: ';' expected.
    